Variantes en asignación de eventos y contadores

--- a/EventosKotlin/app/src/main/res/values/strings.xml
+++ b/EventosKotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EventosKotlin</string>
+    <string name="button21">Button1</string>
+    <string name="button22">Button2</string>
 </resources>
