--- a/EventosKotlin/app/src/main/res/values/strings.xml
+++ b/EventosKotlin/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EventosKotlin</string>
     <string name="button21">Button1</string>
     <string name="button22">Button2</string>
+    <string name="no_incremento">Debe definir un incremento numeral para el contador</string>
 </resources>
